Fix score board and update docs
